<resources>
    <string name="app_name">FinalProjectPro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="reserved_hotel">Reserved Hotel</string>
    <string name="duration">Duration</string>
    <string name="choose_room">Choose Room</string>
    <string name="how_many_rooms_do_you_want">How many rooms do you want?</string>
    <string name="channel_name">Channel 1</string>
    <string name="default_notification_channel_id">Channel 2</string>
    <string name="per_night">Per Night</string>
    <string name="reviews">Reviews</string>
    <string name="select_room">Select Room</string>
    <string name="hotelname" translatable="false">HotelName</string>
    <string name="check_in">Check in</string>
    <string name="checkout">Checkout</string>
    <string name="number_of_rooms">Number Of Rooms</string>
    <string name="paymentmethods">PaymentMethods</string>
    <string name="total">Total</string>
    <string name="finish">Finish</string>
    <string name="find_nearby_hotels_location_via_map">Find NearBy Hotels Location Via Map</string>
    <string name="help_you_choose_your_fitting_rooms">Help You Choose your Fitting Rooms</string>
    <string name="use_our_fast_reservation_system">Use Our Fast Reservation System</string>
    <string name="with_secure_payment_system">With Secure Payment System</string>
    <string name="phone">phone</string>
    <string name="login">LogIn</string>
    <string name="searching_nearby_hotels">SEARCHING NEARBY HOTELS</string>
    <string name="check_availability">Check Availability</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="otp_has_been_sent_to_your_mobile_number_please_enter_it_below">OTP has been sent to your mobile number.please enter it below</string>
    <string name="verify_mobile_number">VERIFY MOBILE NUMBER</string>
    <string name="verify">VERIFY</string>
    <string name="price">price</string>
    <string name="review">Review</string>
    <string name="book">Book</string>
    <string name="lets_discover_new_places">Lets discover new Places!</string>
    <string name="location">Location</string>
    <string name="your_recent_visits">Your Recent Visits</string>
    <string name="hotels">Hotels</string>
    <string name="log_out">Log out</string>
    <string name="details">Details</string>
    <string name="checkin">CheckIn</string>
    <string name="add_your_review_and_rating_here">Add your review and rating here</string>
    <string name="Select">Select</string>
    <string name="select">Select</string>
    <string name="choose_hotel">Choose Hotel</string>
    <string name="reviews_list">Reviews List</string>
    <string name="choose_hotel_type">Choose Hotel Type</string>
    <string name="your_bookings">Your Bookings</string>
</resources>