<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profileadd"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/place_holder_for_message"
        android:elevation="8dp"
        android:padding="12dp"
        android:src="@drawable/ic_baseline_person_add_alt_1_24"
        app:layout_constraintBottom_toTopOf="@id/first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/first"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:elevation="0dp"
        app:cardBackgroundColor="#1EDEDBDB"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_box"
                    android:ems="10"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName"
                    android:paddingStart="4dp"
                    android:textColor="#0E0D0D"
                    android:textColorHint="#101010" />

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_box"
                    android:ems="10"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"
                    android:paddingStart="4dp"
                    android:textColor="#090909"
                    android:textColorHint="#090909" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                >

                <EditText
                    android:id="@+id/Age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edit_text_box"
                    android:ems="10"
                    android:hint="@string/age"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:paddingStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:textColorHint="#0E0E0E" />

                <EditText
                    android:id="@+id/Address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edit_text_box"
                    android:ems="10"
                    android:hint="@string/address"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:paddingStart="12dp"
                    android:layout_marginStart="12dp"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:textColorHint="#0E0E0E" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/female" />
            </RadioGroup>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_shape"
                android:text="@string/register" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>